trybuild-qcell/src/compiletest/qcell_noalloc-01.stderr
error[E0277]: `PhantomPinned` cannot be unpinned
 --> src/compiletest/qcell_noalloc-01.rs:7:16
  |
7 |     is_unpin::<QCellOwnerPinned>();
  |                ^^^^^^^^^^^^^^^^ within `QCellOwnerPinned`, the trait `Unpin` is not implemented for `PhantomPinned`
  |
  = note: consider using `Box::pin`
  = note: required because it appears within the type `QCellOwnerPinned`
note: required by a bound in `is_unpin`
 --> src/compiletest/qcell_noalloc-01.rs:6:20
  |
6 |     fn is_unpin<T: Unpin>() {}
  |                    ^^^^^ required by this bound in `is_unpin`
